MonetDB5/tests/BugTracker/Tests/parser.SF-2051309.stable.out
stdout of test 'parser.SF-2051309` in directory 'tests/BugTracker` itself:


# 00:05:16 >  
# 00:05:16 >   mserver5 "--config=/ufs/mk/monet5//Linux/etc/monetdb5.conf" --debug=10 --set gdk_nr_threads=0 --set "monet_mod_path=/ufs/mk/monet5//Linux/lib/MonetDB5:/ufs/mk/monet5//Linux/lib/MonetDB5/lib:/ufs/mk/monet5//Linux/lib/MonetDB5/bin" --set "gdk_dbfarm=/ufs/mk/monet5//Linux/var/MonetDB5/dbfarm" --set "sql_logdir=/ufs/mk/monet5//Linux/var/MonetDB5/sql_logs"  --set mapi_open=true --set xrpc_open=true --set mapi_port=37910 --set xrpc_port=48953 --set monet_prompt= --trace  --dbname=mTests_tests_BugTracker  parser.SF-2051309.mal
# 00:05:16 >  

# MonetDB server v5.8.0, based on kernel v1.26.0
# Serving database 'mTests_tests_BugTracker', using 4 threads
# Compiled for x86_64-unknown-linux-gnu/64bit with 64bit OIDs dynamically linked
# Copyright (c) 1993-July 2008 CWI.
# Copyright (c) August 2008- MonetDB B.V., all rights reserved
# Visit http://monetdb.cwi.nl/ for further information
# Listening for connection requests on mapi:monetdb://eir.ins.cwi.nl:37910/
!SyntaxException:convertConstant:integer parse error
!TypeException:user.main[3]:'calc.:' undefined in: l:any := calc.:(s:str, lng:any)
!TypeException:user.main[3]:'lng' may not be used before being initialized
function user.main():void;              #  0 main:void := user.main() {G}
    s := "89437487923647823647862387462378468723634":str;#  1 s:str := _2:str {G}
    io.print(s);                        #  2 _3:void := IOprint_val(s:str) 
    l := calc.:(s,lng);                 #  3 l:any := calc.:(s:str, lng:any) {U}
    io.print(l);                        #  4 _6:void := IOprint_val(l:any) 
    e := nil:lng;                       #  5 e:lng := _8:lng 
    io.print(e);                        #  6 _9:void := IOprint_val(e:lng) 
end main;                               #  7  

# 00:05:16 >  
# 00:05:16 >  Done.
# 00:05:16 >  

