MonetDB5/tests/BugTracker/Tests/parser.SF-2051309.mal
s := "89437487923647823647862387462378468723634":str;
io.print(s);
l := s:lng;
io.print(l);
e := 89437487923647823647862387462378468723634:lng;
io.print(e);
